--- a/cliqueBouton.html
+++ b/cliqueBouton.html
@@ -1,6 +1,7 @@
 <!--
         auteur : ANGE MERVEILLE GRACIA YEMELE KANA
         date : 15 OCTOBRE 2023
+        BUT : Devoir
        
 -->
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
 
     <style type="text/css">
         #main {
-            background-color: silver;
+            background-color: rgb(228, 20, 196);
             height: 900px;
         }
 
